--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "@vue/cli-plugin-babel": "^3.0.0-rc.10",
     "@vue/cli-plugin-eslint": "^3.0.0-rc.10",
     "@vue/cli-service": "^3.0.0-rc.10",
-    "vue-template-compiler": "^2.5.16"
+    "autoprefixer": "^9.1.0",
+    "postcss-import": "^11.1.0",
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
+    "tailwindcss": "^0.6.4",
+    "vue-template-compiler": "^2.5.16",
+    "vue-waypoint": "^3.2.2"
   }
 }
