--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "vue": "^2.5.16",
+    "vue-gallery": "^1.4.0",
+    "vue-gallery-slideshow": "^1.2.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -20,6 +22,8 @@
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "tailwindcss": "^0.6.4",
+    "vue-image-lightbox": "^6.0.0",
+    "vue-lazyload": "^1.2.6",
     "vue-template-compiler": "^2.5.16",
     "vue-waypoint": "^3.2.2"
   }
