--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.0.1",
     "@vue/cli-plugin-babel": "^3.0.0-rc.10",
     "@vue/cli-plugin-eslint": "^3.0.0-rc.10",
     "@vue/cli-service": "^3.0.0-rc.10",
     "autoprefixer": "^9.1.0",
+    "cssnano": "^4.0.5",
     "postcss-import": "^11.1.0",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "tailwindcss": "^0.6.4",
     "vue-image-lightbox": "^6.0.0",
     "vue-lazyload": "^1.2.6",
+    "vue-scroll-reveal": "^1.0.8",
     "vue-template-compiler": "^2.5.16",
     "vue-waypoint": "^3.2.2"
   }
